feat: reconcile managed installations
